--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <label for="menu-toggle" class="menu-icon">&#9776;</label>
 
   <nav class="nav-links">
-    <a href="#">Destinations</a>
-    <a href="#">Hotels</a>
-    <a href="#">Flights</a>
-    <a href="#">Bookings</a>
-    <a href="#">Login</a>
+    <a href="#des">Destinations</a>
+    <a href="#top">Hotels</a>
+    <a href="#book">Flights</a>
+    <a href="#in">Bookings</a>
+    <a href="#up">Login</a>
     <button class="sign-up">Sign up</button>
   </nav>
 </header>
@@ -45,7 +45,7 @@
   </div>
 </div>
 
-<section class="services-section">
+<section class="services-section" id="des">
     <p class="category">CATEGORY</p>
     <h2 class="main-heading">We Offer Best Services</h2>
     <div class="services-grid">
@@ -74,7 +74,7 @@
   </section>
 
 
-  <div class="container">
+  <div class="container" id="top">
     <h3 >Top Selling</h3>
     <h1>Top Destinations</h1>
 
@@ -118,7 +118,7 @@
   </div>
 
  
-<section class="main-container">
+<section class="main-container" id="book">
     <div class="left-section">
       <p class="tagline">Easy and Fast</p>
       <h1>Book Your Next Trip<br />In 3 Easy Steps</h1>
@@ -148,7 +148,7 @@
       </div>
     </div>
 
-    <div class="right-section">
+    <div class="right-section" >
       <div class="card">
         <img src="./Rectangle 17.jpg" alt="Trip to Greece" class="main-img"/>
         <div class="card-body">
@@ -178,7 +178,7 @@
 
 
   <!-- Testimonials Section -->
- <section class="testimonial">
+ <section class="testimonial" id="in">
   <div class="testimonial-left">
     <p class="small-heading">Testimonials</p>
     <h2 class="main-heading">What People Say<br>About Us.</h2>
@@ -213,7 +213,7 @@
   </section>
 
 
-  <div class="subscribe-section">
+  <div class="subscribe-section" id="up">
   <div class="subscribe-container">
     <h2>Subscribe to get information, latest news and other<br> interesting offers about Jadoo<h2>
     <form class="subscribe-form">
